limit image height and fix shifting nav header
Former-commit-id: e12f680332a286e34a52448b2928ae22752cdf26

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -16,6 +16,7 @@ main {
 
 img {
   max-width: 100%;
+  max-height: 70vh;
   /* border-radius: 0.2rem; */
 }
 
@@ -36,6 +37,10 @@ nav {
   background: rgb(255,255,255);
   background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
   z-index: 500;
+  /*
+   * prevents scrollbars from shifting the nav header by using css3 to calculate the width of the scrollbar
+   */
+  padding-left: calc(100vw - 100%);
 }
 
 h1 {
